--- a/4ºDia - Aluraflix2/style.css
+++ b/4ºDia - Aluraflix2/style.css
@@ -56,7 +56,7 @@ body {
     font-weight: bold;
     padding: 15px 20px;
     font-size: 16px;
-    borde-radius: 4px;
+    border-radius: 4px;
     margin-top: 20px;
     cursor: pointer;
     transition: 0.3s;
@@ -65,4 +65,9 @@ body {
   .form-wrapper button:hover {
     opacity: 0.8;
   }
-  
+  #res {
+    width: 200px;
+    height: 200px;
+    background-color: white;
+    color: black;
+  }
